# RAG-Langchain-LLM-ChatBot

./: .env.example  .gitignore  Dockerfile  LICENSE  PRODUCTION.md  README.md  REFERENCES.md  RUNNING_LOCALLY.md  docker-compose.yml  pyproject.toml  run
assets/todo/: BACKLOG.md  ROADMAP.md
chatbot_api/: main.py
chatbot_api/chains/: __init__.py  chain.py  memory.py  session.py
chatbot_api/constants/: __init__.py
chatbot_api/csv/: stock.csv
chatbot_api/ingests/: __init__.py  ingest.py
chatbot_api/parsers/: parser.py
chatbot_api/prompts/: __init__.py  sales_agent.py
data/markdown/: sample.md
